objects/TaxCreditApplication__c.object
<CustomObject>
    <fields>
        <fullName>Adultslivinginyourhousehold__c</fullName>
        <inlineHelpText>PLEASE HAVE THE PRIMARY OWNER FILL OUT THESE QUESTIONS</inlineHelpText>
        <label>Adults living in your household</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationStatus__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tax_Credit_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApproversName__c</fullName>
        <formula>Approver__r.FirstName + &apos; &apos; + Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Childreninkindergartenorelementarys__c</fullName>
        <description>Children in kindergarten or elementary school (1st Grade to 5th Grade):</description>
        <inlineHelpText>Children in kindergarten or elementary school (1st Grade to 5th Grade):</inlineHelpText>
        <label>Children in kindergarten or elementary</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Childrenpreschoolagebelow__c</fullName>
        <label>Children pre-school age &amp; below</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Childrensschoolenrollment__c</fullName>
        <description>Please select the option that best represents your child’s or children’s school enrollment</description>
        <inlineHelpText>Please select the option that best represents your child’s or children’s school enrollment</inlineHelpText>
        <label>Children’s school enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In public school and will stay in public school after this change of residence</fullName>
                </value>
                <value>
                    <fullName>In private school and will stay in private school after this change of residence</fullName>
                </value>
                <value>
                    <fullName>Transitioning from public school to private school with this change of residence</fullName>
                </value>
                <value>
                    <fullName>Transitioning from private school to public school with this change of residence</fullName>
                </value>
                <value>
                    <fullName>Some children in public school and some in private school regardless of change of residence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractAmount__c</fullName>
        <label>Contract Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Employment_Status__c</fullName>
        <inlineHelpText>If you selected other for employment status please fill this out</inlineHelpText>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primaryreasonsformoving__c</fullName>
        <description>The new location has the following advantages: (Select up to three choices)</description>
        <inlineHelpText>The new location has the following advantages: (Select up to three choices)</inlineHelpText>
        <label>Primary reasons for moving</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lower crime rate</fullName>
                </value>
                <value>
                    <fullName>Higher quality public school</fullName>
                </value>
                <value>
                    <fullName>Better lot/yard size</fullName>
                </value>
                <value>
                    <fullName>Closer to family/friends</fullName>
                </value>
                <value>
                    <fullName>Closer to a public park</fullName>
                </value>
                <value>
                    <fullName>Closer to a shopping area</fullName>
                </value>
                <value>
                    <fullName>Shorter commute to work</fullName>
                </value>
                <value>
                    <fullName>No advantage, the move is involuntary</fullName>
                </value>
                <value>
                    <fullName>Easier to pursue an education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesAmount__c</fullName>
        <label>Sales Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tax_Credit_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <label>Ward</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Whatisyourcurrentemploymentstatus__c</fullName>
        <label>What is your current employment status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Looking for Work</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Homemaker</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Whatisyourgender__c</fullName>
        <label>What is your gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Whatisyourmaritalstatus__c</fullName>
        <label>What is your marital status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single (never married)</fullName>
                </value>
                <value>
                    <fullName>Living as married with a partner</fullName>
                </value>
                <value>
                    <fullName>Divorced / Widowed / Separated</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax Credit Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Tax Credit Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Credit Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Employment_status_other_description</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Whatisyourcurrentemploymentstatus__c, &apos;Other&apos;) ,  ISBLANK(Other_Employment_Status__c))</errorConditionFormula>
        <errorDisplayField>Other_Employment_Status__c</errorDisplayField>
        <errorMessage>Please add description of your employment status</errorMessage>
    </validationRules>
</CustomObject>